--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                     <li class="menu__item"><a class="menu__link" href="#avtokg">О нас</a></li>
                     <li class="menu__item"><a class="menu__link" href="#category">Категория</a></li>
                     <li class="menu__item"><a class="menu__link" href="content.html">Онлайн-тест</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#faq">FAQ</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#faq">FAQ's</a></li>
                     <li class="menu__item"><a class="menu__link" href="#footer">Контакты</a></li>
                 </ul>
             </div>
@@ -151,26 +151,28 @@
     <section class="stages">
         <div class="container">
             <div class="row">
-                <h2 class="stages__title">Этапы прохождения обучения</h2>
-                <div class="col-md-6">
+                <div class="col-md-12">
+                    <h2 class="stages__title">Этапы прохождения обучения</h2>
+                </div>
+                <div class="col-xl-3 col-lg-6">
                     <p class="stages__number">1</p>
                     <p class="stages__descr">Изучение теоретической
                         части
                         </p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xl-3 col-lg-6">
                     <p class="stages__number">2</p>
                     <p class="stages__descr">Вождение 
                         с инструктором
                         </p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xl-3 col-lg-6">
                     <p class="stages__number">3</p>
                     <p class="stages__descr">Внутренний экзамен
                         в автошколе
                         </p>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-lg-6">
                     <p class="stages__number">4</p>
                     <p class="stages__descr">Экзамен в ГРС 
                         в сопровождении автошколы</p>
