--- a/src/index.html
+++ b/src/index.html
@@ -82,12 +82,11 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12 col-lg-6 col-sm-12">
                     <div class="avto__wrapper">
-                        <div class="avto__header"><span>Главная ·</span> «Автошкола ОБД-Центр»</div>
-                        <h1 class="avto__title">Бишкекская автошкола ОсОО ОБД-Центр</h1>
+                        <h1 class="section__title">Бишкекская автошкола ОсОО ОБД-Центр</h1>
                         <p class="avto__descr">Разположен в центре города Бишкек, по адресу пр. Чуй-215, (Пересекает Т.Молдо) «Автошкола» ведет свою деятельность с 2005 года
                             <span>Автошкола лицензированное учереждение, обучающее профессиональному и безопасному вождению на дорогах. В автошколе ОсОО «ОБД-Центр» опытные преподаватели и инструктора по воддению автомрбилю с многолетним опытом, цены на подготовки водителей приемлемые</span>
                         </p>
-                        <a href="#application" class="avto__btn">Записаться</a>
+                        <a href="#application" class="avto__btn btn__show__pulse">Записаться</a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-12 col-lg-6">
@@ -102,7 +101,7 @@
             <div class="row">
                 <div class="col-12 col-lg-12">
                     <p class="discount__descr">Скидка  1 000 сом</p>
-                    <h2 class="discount__title">Запишись прямо сейчас и получи скидку на обучение</h2>
+                    <h2 class="section__title">Запишись прямо сейчас и получи скидку на обучение</h2>
                 </div>
                 <div class="col-12 col-md-12 col-md-offset-6">
                     <form class="discount__form" id="discount__query-form" action="#">
@@ -119,7 +118,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="title__text">Чтобы начать обучение, нет необходимости ждать набора группы, занятия начнутся в день заключения договора!</h1>
+                    <h1 class="section__title">Чтобы начать обучение, нет необходимости ждать набора группы, занятия начнутся в день заключения договора!</h1>
                     <p class="title__descr">Записаться и начать обучение можно не выходя из дома:</p>
                 </div>
             </div>
@@ -152,7 +151,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="stages__title">Этапы прохождения обучения</h2>
+                    <h2 class="section__title">Этапы прохождения обучения</h2>
                 </div>
                 <div class="col-xl-3 col-lg-6">
                     <p class="stages__number">1</p>
@@ -184,11 +183,10 @@
     <section class="price" id="category">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4 col-lg-12">
-                    <h2 class="price__title">Стоимость обучения</h2>
-                    <p class="price__subheader">«Автошкола ОБД-Центр»</p>
+                <div class="col-12">
+                    <h2 class="section__title">Стоимость обучения</h2>
                 </div>
-                <div class="col-xl-4 col-md-12">
+                <div class="col-xl-6 col-md-12">
                     <div class="price__bg">
                         <p class="price__category">Категория «В»</p>
                         <p class="price__old">7 000</p>
@@ -202,7 +200,7 @@
                         <a class="price__button" href="#application">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-12">
+                <div class="col-xl-6 col-md-12">
                     <div class="price__bg price-mb">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
@@ -276,7 +274,7 @@
                         <h2 class="map__title">География присутствия</h2>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="450" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
-                        <a href="#application" class="map__btnbig">Записаться на обучение</a>
+                        <a href="#application" class="map__btnbig btn__show__pulse">Записаться на обучение</a>
                     </div>
                 </div>
             </div>
