--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
     <section class="avto" id="avtokg">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-md-12 col-lg-6 col-sm-12">
+                <div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
                     <div class="avto__wrapper">
                         <div class="avto__header"><span>Главная ·</span> «Автошкола ОБД-Центр»</div>
                         <h1 class="avto__title">Бишкекская автошкола ОсОО ОБД-Центр</h1>
@@ -90,7 +90,7 @@
                         <a href="#application" class="avto__btn">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-6 col-md-12 col-lg-6">
+                <div class="col-xl-6 col-md-6 col-lg-6">
                     <img src="img/driving.webp" width="550" alt="img">
                 </div>
             </div>
@@ -243,7 +243,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-6">
                     <h2 class="faqs__title">Часто задаваемые вопросы:</h2>
                 </div>
-                <div class="col-xl-6 col-lg-offset-3 col-md-6">
+                <div class="col-xl-6 col-md-6-offset-3">
                     <div class="faqs__item" data-faqs="open">
                         <div class="faqs__open">С какого возраста можно начать обучение?<i class="fal fa-angle-down"></i></div>
                         <p class="faqs__completed">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
