--- a/src/pdd.html
+++ b/src/pdd.html
@@ -19,9 +19,6 @@
             <div class="col-md-12">
                 <article>
                     <div class="row">
-                        <div id="questTopButton" class="col-md-6">
-                            <div class="quest-start">Перезапустить тест</div>
-                        </div>
                         <div id="timerBlock" class="col-md-6" style="text-align:right; float: right;">
                             <span style="margin-right:10px; font-weight: 400; font-size: 22px;">Ваши время 25:00</span>
                             <span style="margin-right:3px;"><svg xmlns="http://www.w3.org/2000/svg" width="19"
@@ -59,10 +56,10 @@
                                     </div>
                                 </div>
                                 <div id="questButton" class="row">
-                                    <div id="questPrev" class="col-md-6">
+                                    <div id="questPrev" class="col-6">
                                         <div class="quest-prev">Предыдущее</div>
                                     </div>
-                                    <div id="questNext" class="col-md-6">
+                                    <div id="questNext" class="col-6">
                                         <div class="quest-next">Следующее</div>
                                     </div>
                                 </div>
