gulp include html has been tested

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 </head>
 <!-- START MAIN -->
 <body class="body">
+
     <div class="banner">
         <div class="container">
             <div class="row">
@@ -35,7 +36,6 @@
             </div>
         </div>
     </div>
-
     <div class="promo">
         <div class="container">
             <div class="row">
@@ -54,9 +54,7 @@
             </div>
         </div>
     </div>
-
     <hr>
-
     <header class="menu" id="up">
         <nav>
             <div class="container">
@@ -305,8 +303,7 @@
                 <div class="col-md-12">
                     <hr class="footer__line">
                     <p class="footer__proverbs">
-                        © 2022 Автошкола «ОБД-Центр»
-                        Все права защищены
+                        © 2022 Автошкола «ОБД-Центр» Все права защищены
                     </p>
                 </div>
             </div>
