updated title, faq, variables files

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="banner">
         <div class="container">
-            <div class="row banner__bg">
+            <div class="row">
                 <div class="col-4 col-mb-3">
                     <a class="banner__inst" href="#"><i class="fab fa-instagram"></i></a>
                     <a class="banner__what" href="#"><i class="fab fa-whatsapp"></i></a>
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-12 col-lg-12">
                     <p class="discount__descr">Скидка  1 000 сом</p>
-                    <h2 class="section__title">Запишись прямо сейчас и получи скидку на обучение</h2>
+                    <h2 class="discount__title">Запишись прямо сейчас и получи скидку на обучение</h2>
                 </div>
                 <div class="col-12 col-md-12 col-md-offset-6">
                     <form class="discount__form" id="discount__query-form" action="#">
@@ -225,35 +225,41 @@
         </div>
     </section>
 
-    <section class="faqs" id="faq">
+    <section class="faq" id="faqs">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-6">
-                    <h2 class="section-title">Часто задаваемые вопросы:</h2>
-                </div>
-                <div class="col-xl-6 col-md-6-offset-3">
-                    <div class="faqs__item" data-faqs="open">
-                        <div class="faqs__open">С какого возраста можно начать обучение?<i class="fal fa-angle-down"></i></div>
-                        <p class="faqs__completed">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                    </div>
-                    <div class="faqs__item">
-                        <p class="faqs__open">Если в ходе изучения теории возник вопрос?<i class="fal fa-angle-down"></i></p>
-                        <p class="faqs__completed">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                    </div>
-                    <div class="faqs__item">
-                        <p class="faqs__open">Какие документы необходимы?<i class="fal fa-angle-down"></i></p>
-                        <p class="faqs__completed">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                    </div>
-                    <div class="faqs__item">
-                        <p class="faqs__open">Можно ли приостановить обучение?<i class="fal fa-angle-down"></i></p>
-                        <p class="faqs__completed">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                    </div>
-                    <div class="faqs__item">
-                        <p class="faqs__open">Когда начинается вождение?<i class="fal fa-angle-down"></i></p>
-                        <p class="faqs__completed">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                    </div>
-                </div>
-            </div>
+           <h2 class="section-title">Часто задаваемые вопросы:</h2>
+            <ul class="faq__list">
+                <li class="faq__item" data-faqs="open">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
+                </li>
+                <li class="faq__item">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
+                </li>
+                <li class="faq__item">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
+                </li>
+                <li class="faq__item">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
+                </li>
+                <li class="faq__item">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
+                </li>
+                <li class="faq__item">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
+                </li>
+            </ul>
         </div>
     </section>
 
