added conditions file

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <p class="banner__time">пн-пт 09:00 18:00, сб-вс 10:00 18:00</p>
                 </div>
                 <div class="col-4 col-mb-3">
-                    <p class="banner__price"><span>г.</span> Бишкек</p>
+                    <p class="banner__price"><span>г.</span>Бишкек</p>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row promo__border-bottom">
                 <div class="col-3">
-                    <a class="promo__logo" href="#"><img src="" alt="logo" width="50"></a>
+                    <a class="promo__logo" href="#"><img src="img/logo.png" alt="logo" width="65"></a>
                 </div>
                 <div class="col-3">
                     <a class="promo__phone" href="tel:996707228818">+996 707 22 88 18</a>
@@ -107,31 +107,22 @@
             </div>
         </div>
     </section>
-
-    <section class="title">
+    
+    <section class="conditions">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <h1 class="section-title">Чтобы начать обучение, нет необходимости ждать набора группы, занятия начнутся в день заключения договора!</h1>
-                    <p class="title__descr">Записаться и начать обучение можно не выходя из дома:</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="description">
-        <div class="container">
-            <div class="row">
+                <h1 class="section-title">Благоприятные условия для  обучения в нашей Автошколе</h1>
                 <div class="col-xl-6 col-md-12">
-                    <li class="description__text">Автошкола предоставлять дополнительные часы на практичесие навыки вождения для лиц, желающих еще более усовершенствовать свои навыки вождения</li>
-                    <li class="description__text">Оплата за обучение возможна произвести по частям</li>
-                    <li class="description__text">Теоретические занятия утром и вечером</li>
-                    <li class="description__text">Практические занятия по вождению с 09.00 до 18.00</li>
+                    <li class="conditions__text">Автошкола предоставлять дополнительные часы на практичесие навыки вождения для лиц, желающих еще более усовершенствовать свои навыки вождения</li>
+                    <li class="conditions__text">Оплата за обучение возможна произвести по частям</li>
+                    <li class="conditions__text">Теоретические занятия утром и вечером</li>
+                    <li class="conditions__text">Практические занятия по вождению с 09.00 до 18.00</li>
                 </div>
                 <div class="col-xl-6 col-md-12">
-                    <li class="description__text">С понедельника по субботу, график и времия вождения вы сами выбираете в удобное время, и инструкторов тоже</li>
-                    <li class="description__text">Категория «В» срок обучения 2,5 месяц</li>
-                    <li class="description__text">Категория «ВС» срок обучения 3,5 месяц</li>
+                    <li class="conditions__text">С понедельника по субботу, график и времия вождения вы сами выбираете в удобное время, и инструкторов тоже</li>
+                    <li class="conditions__text">Категория «В» срок обучения 2,5 месяц</li>
+                    <li class="conditions__text">Категория «ВС» срок обучения 3,5 месяц</li>
+                    <li class="conditions__text">Рассрочка до конца обучения</li>
                 </div>
             </div>
         </div>
@@ -231,32 +222,32 @@
             <ul class="faq__list">
                 <li class="faq__item" data-faqs="open">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <a href="#" class="faq__link">С какого возраста можно начать обучение ?<i class="far fa-angle-down"></i></a>
+                    <p class="faq__descr">Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</p>
+                </li>
+                <li class="faq__item">
+                    <i class="fas fa-question-circle"></i>
+                    <a href="#" class="faq__link">Если в ходе изучения теории возник вопрос ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <a href="#" class="faq__link">Можно ли приостановить обучение ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <a href="#" class="faq__link">Какие документы необходимы ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <a href="#" class="faq__link">Можно ли сократить или увеличить срок обучения ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                </li>
-                <li class="faq__item">
-                    <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение?<i class="far fa-angle-down"></i></a>
+                    <a href="#" class="faq__link">Когда начинается вождение ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
             </ul>
