Updated File Tickets, Question

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                     <li class="menu__item"><a class="menu__link" href="index.html">Главная</a></li>
                     <li class="menu__item"><a class="menu__link" href="#avtokg">О нас</a></li>
                     <li class="menu__item"><a class="menu__link" href="#category">Категория</a></li>
-                    <li class="menu__item"><a class="menu__link" href="content.html">Онлайн-тест</a></li>
+                    <li class="menu__item"><a class="menu__link" href="tickets.html">Онлайн-тест</a></li>
                     <li class="menu__item"><a class="menu__link" href="#faq">FAQ's</a></li>
                     <li class="menu__item"><a class="menu__link" href="#footer">Контакты</a></li>
                 </ul>
@@ -233,19 +233,6 @@
             </div>
         </div>
     </section>
-    <p>
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-          Ссылка с href
-        </a>
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-          Кнопка с data-target
-        </button>
-      </p>
-      <div class="collapse" id="collapseExample">
-        <div class="card card-body">
-          Некоторый заполнитель для компонента сворачивания. Эта панель по умолчанию скрыта, но открывается, когда пользователь активирует соответствующий триггер.
-        </div>
-      </div>
 
     <section class="faqs" id="faq">
         <div class="container">
@@ -330,8 +317,8 @@
     <!-- EBD MAIN -->
 
     <!-- connections Script -->
-    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="plugins/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="plugins/jQuery/jquery-migrate-3.3.1.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
