--- a/src/index.html
+++ b/src/index.html
@@ -80,10 +80,14 @@
                     <p class="avto__descr">Разположен в центре города Бишкек, по адресу пр. Чуй-215, (Пересекает Т.Молдо) «Автошкола» ведет свою деятельность с 2005 года
                         <span>Автошкола лицензированное учереждение, обучающее профессиональному и безопасному вождению на дорогах. В автошколе ОсОО «ОБД-Центр» опытные преподаватели и инструктора по воддению автомрбилю с многолетним опытом, цены на подготовки водителей приемлемые</span>
                     </p>
-                    <a href="#application" class="btn-show-pulse">Записаться</a>
+                    <div class="avto__btn">
+                        <a href="#application" class="btn-show-pulse">Записаться</a>
+                    </div>
                 </div>
                 <div class="col-xl-6 col-lg-12">
-                    <img src="img/driving.webp" width="550" alt="img">
+                    <div class="avto__img">
+                        <img src="img/driving.webp" width="550" alt="img">
+                    </div>
                 </div>
             </div>
         </div>
@@ -260,7 +264,7 @@
                         <h2 class="map__title">География присутствия</h2>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="450" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
-                        <a href="#application" class="button__link btn-show-pulse">Записаться на обучение</a>
+                        <a href="#application" class="btn-show-pulse">Записаться на обучение</a>
                     </div>
                 </div>
             </div>
