--- a/src/index.html
+++ b/src/index.html
@@ -212,32 +212,32 @@
             <ul class="faq__list">
                 <li class="faq__item" data-faqs="open">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">С какого возраста можно начать обучение ?<i class="far fa-angle-down"></i></a>
+                    <a class="faq__link">С какого возраста можно начать обучение ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">Если в ходе изучения теории возник вопрос ?<i class="far fa-angle-down"></i></a>
+                    <a class="faq__link">Если в ходе изучения теории возник вопрос ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">Можно ли приостановить обучение ?<i class="far fa-angle-down"></i></a>
+                    <a class="faq__link">Можно ли приостановить обучение ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">Какие документы необходимы ?<i class="far fa-angle-down"></i></a>
+                    <a class="faq__link">Какие документы необходимы ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">Можно ли сократить или увеличить срок обучения ?<i class="far fa-angle-down"></i></a>
+                    <a class="faq__link">Можно ли сократить или увеличить срок обучения ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
                 <li class="faq__item">
                     <i class="fas fa-question-circle"></i>
-                    <a href="#" class="faq__link">Когда начинается вождение ?<i class="far fa-angle-down"></i></a>
+                    <a class="faq__link">Когда начинается вождение ?<i class="far fa-angle-down"></i></a>
                     <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
                 </li>
             </ul>
