updated faqs file

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <section class="avto" id="avtokg">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-12">
+                <div class="col-xl- col-lg-6">
                     <h1 class="section-title">Бишкекская автошкола ОсОО ОБД-Центр</h1>
                     <p class="avto__descr">Разположен в центре города Бишкек, по адресу пр. Чуй-215, (Пересекает Т.Молдо) «Автошкола» ведет свою деятельность с 2005 года
                         <span>Автошкола лицензированное учереждение, обучающее профессиональному и безопасному вождению на дорогах. В автошколе ОсОО «ОБД-Центр» опытные преподаватели и инструктора по воддению автомрбилю с многолетним опытом, цены на подготовки водителей приемлемые</span>
@@ -71,9 +71,9 @@
                         <a href="#application" class="btn-show-pulse">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-12">
+                <div class="col-xl-6 col-lg-6">
                     <div class="avto__img">
-                        <img src="img/driving.webp" width="550" alt="img">
+                        <img src="img/driving.webp" width="550" alt="images">
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
     <section class="discount">
         <div class="container discount__bg">
             <div class="row">
-                <div class="col-12 col-lg-12">
+                <div class="col-12">
                     <p class="discount__descr">Скидка  1 000 сом</p>
                     <h2 class="discount__title">Запишись прямо сейчас и получи скидку на обучение</h2>
                 </div>
@@ -102,13 +102,13 @@
         <div class="container">
             <div class="row">
                 <h1 class="section-title">Благоприятные условия для  обучения в нашей Автошколе</h1>
-                <div class="col-xl-6 col-md-12">
+                <div class="col-xl-6 col-lg-6">
                     <li class="conditions__text">Автошкола предоставлять дополнительные часы на практичесие навыки вождения для лиц, желающих еще более усовершенствовать свои навыки вождения</li>
                     <li class="conditions__text">Оплата за обучение возможна произвести по частям</li>
                     <li class="conditions__text">Теоретические занятия утром и вечером</li>
                     <li class="conditions__text">Практические занятия по вождению с 09.00 до 18.00</li>
                 </div>
-                <div class="col-xl-6 col-md-12">
+                <div class="col-xl-6 col-lg-6">
                     <li class="conditions__text">С понедельника по субботу, график и времия вождения вы сами выбираете в удобное время, и инструкторов тоже</li>
                     <li class="conditions__text">Категория «В» срок обучения 2,5 месяц</li>
                     <li class="conditions__text">Категория «ВС» срок обучения 3,5 месяц</li>
@@ -120,23 +120,21 @@
 
     <section class="stages">
         <div class="container">
+            <h2 class="section-title">Этапы прохождения обучения</h2>
             <div class="row">
-                <div class="col-md-12">
-                    <h2 class="section-title">Этапы прохождения обучения</h2>
-                </div>
-                <div class="col-xl-3 col-lg-6 stages__box">
+                <div class="col-xl-3 col-lg-3 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Изучение теоретической части</p>
                 </div>
-                <div class="col-xl-3 col-lg-6 stages__box">
+                <div class="col-xl-3 col-lg-3 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Вождение с инструктором</p>
                 </div>
-                <div class="col-xl-3 col-lg-6 stages__box">
+                <div class="col-xl-3 col-lg-3 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Внутренний экзамен в автошколе</p>
                 </div>
-                <div class="col-xl-3 col-lg-6 stages__box">
+                <div class="col-xl-3 col-lg-3 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Экзамен в ГРС в сопровождении автошколы</p>
                 </div>
@@ -150,7 +148,7 @@
                 <div class="col-12">
                     <h2 class="section-title">Стоимость обучения</h2>
                 </div>
-                <div class="col-xl-6 col-md-12">
+                <div class="col-xl-6 col-lg-6">
                     <div class="price__bg">
                         <p class="price__category">Категория «В»</p>
                         <p class="price__old">7 000</p>
@@ -164,7 +162,7 @@
                         <a class="button__link button__link-price" href="#application">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-6 col-md-12">
+                <div class="col-xl-6 col-lg-6">
                     <div class="price__bg price-mb">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
@@ -202,38 +200,52 @@
     <section class="faq" id="faqs">
         <div class="container">
            <h2 class="section-title">Часто задаваемые вопросы:</h2>
-            <ul class="faq__list">
-                <li class="faq__item" data-faqs="open">
-                    <i class="fas fa-question-circle"></i>
-                    <a class="faq__link">С какого возраста можно начать обучение ?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</p>
-                </li>
-                <li class="faq__item">
-                    <i class="fas fa-question-circle"></i>
-                    <a class="faq__link">Если в ходе изучения теории возник вопрос ?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                </li>
-                <li class="faq__item">
-                    <i class="fas fa-question-circle"></i>
-                    <a class="faq__link">Можно ли приостановить обучение ?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                </li>
-                <li class="faq__item">
-                    <i class="fas fa-question-circle"></i>
-                    <a class="faq__link">Какие документы необходимы ?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                </li>
-                <li class="faq__item">
-                    <i class="fas fa-question-circle"></i>
-                    <a class="faq__link">Можно ли сократить или увеличить срок обучения ?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                </li>
-                <li class="faq__item">
-                    <i class="fas fa-question-circle"></i>
-                    <a class="faq__link">Когда начинается вождение ?<i class="far fa-angle-down"></i></a>
-                    <p class="faq__descr">Начать обучение можно с 16 лет, сдать экзамены в 17 лет, в 18 лет получить права.</p>
-                </li>
-            </ul>
+            <div class="row">
+            <div class="col">
+                <div class="tabs">
+                    <div class="tab">
+                        <input type="checkbox" id="chck1">
+                        <label class="tab-label" for="chck1">С какого возраста можно начать обучение ?</label>
+                        <div class="tab-content">Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</div>
+                    </div>
+                        <div class="tab">
+                            <input type="checkbox" id="chck2">
+                            <label class="tab-label" for="chck2">Если в ходе изучения теории возник вопрос ?</label>
+                            <div class="tab-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <input type="checkbox" id="chck3">
+                            <label class="tab-label" for="chck3">Можно ли приостановить обучение ?</label>
+                            <div class="tab-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <input type="checkbox" id="chck4">
+                            <label class="tab-label" for="chck4">Какие документы необходимы ?</label>
+                            <div class="tab-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <input type="checkbox" id="chck5">
+                            <label class="tab-label" for="chck5">Можно ли сократить или увеличить срок обучения ?</label>
+                            <div class="tab-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <input type="checkbox" id="chck6">
+                            <label class="tab-label" for="chck6">Когда начинается вождение ?</label>
+                            <div class="tab-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
